分离文件让代码更加清晰.

--- a/index.html
+++ b/index.html
@@ -13,14 +13,6 @@
             <h1 class="shadow">Zaker</h1>
         </div>
         <div id="content">
-          
-
-<!-- 
-            <div class="page"  id="page6">
-                <div class="blog" style="width:512px;height:340px;"></div>
-                <div class="blog" style="width:512px;height:340px;"></div>
-                <div class="blog" style="width:1024px;height:408px;"></div>
-            </div> -->
         </div>
     </body>
 
@@ -35,211 +27,12 @@
     <script id="blog-template" type="x-template">
     <h2>{title}</h2>{encoded}
     </script>
-    <script type="text/javascript" src="jquery-1.7.2.min.js"></script>
-    <script type="text/javascript" src="jquery.xml2json.js"></script>
-    <script type="text/javascript" src="jquery.event.swipe.js"></script>
-    <script type="text/javascript" src="jquery.event.move.js"></script>
-    <script type="text/javascript" src="class.js"></script>
-    <script type="text/javascript" id="rssStore">
-    function RssStore(url){
-        this.url = url;
-        this.blogs  = [];
-    }
-    RssStore.prototype.fetch = function(callback){
-        var self = this;
-        $.get(this.url, function(xml) {
-            var jsonObj = $.xml2json(xml);
-            self.blogs = [].concat(jsonObj.channel.item);
-
-            callback&&callback();
-        }); 
-    };
-    RssStore.prototype.getRecord = function(index){
-        return "something";
-    };
-    RssStore.prototype.pop = function(){
-        if(this.blogs.length === 0) return null;
-        return this.blogs.pop();
-    };
-    </script>
-    <script type="text/javascript" id="view">
-    var layoutData = [{
-        width1:512,
-        height1:748,
-        float1:'left',
-        width2:512,
-        height2:340,
-        float2:'left',
-        width3:512,
-        height3:408,
-        float3:'left'
-    },{
-        width1:512,
-        height1:340,
-        float1:'left',
-        width2:512,
-        height2:748,
-        float2:'right',
-        width3:512,
-        height3:408,
-        float3:'left'
-    },{
-        width1:512,
-        height1:748,
-        float1:'left',
-        width2:512,
-        height2:340,
-        float2:'left',
-        width3:512,
-        height3:408,
-        float3:'left'
-    },{
-        width1:512,
-        height1:340,
-        float1:'left',
-        width2:512,
-        height2:340,
-        float2:'left',
-        width3:1024,
-        height3:408,
-        float3:'left'
-    }
-    ]
-
-    var View = Class.extend({
-        init:function(templateId, data){
-            this.template = $(templateId).html();
-            this.data = data;
-        },
-        fillData:function(){
-            var result = this.template;
-            var data = this.data;
-            for(var k in data){
-                result = result.replace('{'+k+'}',data[k]);
-            }
-            return result;
-        },
-        render:function(){
-            this.$el = $(this.fillData());
-            return this;
-        }
-    });
-
-    var PageView = View.extend({
-        init:function(data,rssStore){
-            this._super("#page-template",data);
-            this.rssStore = rssStore;
-        },
-        render:function(){
-            this.$el = $(this.fillData());
-            var self = this;         
-            this.$el.find('.blog').each(function(index,item){
-                var blogView = new BlogView(self.rssStore.pop());
-                blogView.render().$el.appendTo(item);
-            })
-            return this;
-        }
-    });
-
-    var BlogView = View.extend({
-        init:function(data){
-            this._super("#blog-template",data);
-        }
-    });
-    </script>
-    <script type="text/javascript">
-
-    $(function(){
-
-        //init
-        var current = 0;
-
-        //event listen
-
-        $('#cover').on('swipeup',function(){
-            $(this).slideUp(200);
-        });
-
-        $('#content').on('swipedown', function(e) {
-            $('#cover').slideDown(200);
-        })
-
-        $('#content').on('swipeleft', function(e) {
-            generatePageView();
-
-            var $pages = $('.page');
-            var count = $pages.length;
-
-            var width = $(this).width();
-            $($pages[current]).animate({
-                left: '-='+width
-            }, 500,function(){$(this).hide()});
-            current<count-1?current++:current=0;            
-
-            $($pages[current]).css('left',width).show().animate({
-                left:'0'
-            }, 500);
-        })
-
-        $('#content').on('swiperight', function(e) {
-            new PageView(layoutData[2])
-                .render()
-                .$el.appendTo('#content')
-                .show();
-
-            var $pages = $('.page');
-            var width = $(this).width();
-            $($pages[current]).animate({
-                left: '+='+width
-            }, 500,function(){$(this).hide()});
-            current>0?current--:current=count-1;            
-            $($pages[current]).css('left',0-width).show().animate({
-                left:'0'
-            }, 500);
-        });
-
-
-        $().click(function(){
-            var width = $(this).width();
-            $($pages[current]).animate({
-                left: '-='+width
-            }, 500,function(){$(this).hide()});
-            current<count-1?current++:current=0;            
-            $($pages[current]).css('left',width).show().animate({
-                left:'0'
-            }, 500);
-        });
-
-        $('#content').delegate('h2','click',function(event){
-            $blog = $(this).parent();
-            if($blog.hasClass('fullscreen')){
-                $blog.removeClass('fullscreen');
-                $blog.animate($blog.data('size'),200);
-            }
-            else{
-                $blog.addClass('fullscreen');
-                $blog.data('size',{width:$blog.width(),height:$blog.height()});
-                var width = $('body').width();
-                var height = $('body').height();
-                $blog.animate({width:width-10,height:height-10},200);
-            }
-            event.stopPropagation();
-        })
-
-
-        //logic
-        function generatePageView(){
-            var pageView = new PageView(layoutData[0],rssStore);
-            pageView.render();
-            pageView.$el.appendTo('#content').show();
-            return pageView;
-        }
-
-        var rssStore = new RssStore("rss.xml");
-        rssStore.fetch(function(){
-            generatePageView();
-
-        });
-    })
-    </script>
+    <script type="text/javascript" src="lib/jquery-1.7.2.min.js"></script>
+    <script type="text/javascript" src="lib/jquery.xml2json.js"></script>
+    <script type="text/javascript" src="lib/jquery.event.swipe.js"></script>
+    <script type="text/javascript" src="lib/jquery.event.move.js"></script>
+    <script type="text/javascript" src="lib/class.js"></script>
+    <script type="text/javascript" src="app/View.js"></script>
+    <script type="text/javascript" src="app/RssStore.js"></script>
+    <script type="text/javascript" src="app.js"></script>
 </html>
