Random generate views.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>superwolf</title>
         <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <link rel="stylesheet" type="text/css" href="index.css" />
+        <!-- <link rel="stylesheet" type="text/css" href="index.css" /> -->
     </head>
     <body>
         <div id="status-bar">status-bar</div>
@@ -35,7 +35,11 @@
     <script type="text/javascript" src="lib/jquery.event.swipe.js"></script>
     <script type="text/javascript" src="lib/jquery.event.move.js"></script>
     <script type="text/javascript" src="lib/class.js"></script>
+    <script type="text/javascript" src="lib/jquery.masonry.js"></script>
+
     <script type="text/javascript" src="app/View.js"></script>
+    <script type="text/javascript" src="app/MasonryView.js"></script>
     <script type="text/javascript" src="app/RssStore.js"></script>
+    <script type="text/javascript" src="app/config.js"></script>
     <script type="text/javascript" src="app.js"></script>
 </html>
