--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 
     <script type="text/javascript" src="app/EventBus.js"></script>
     <script type="text/javascript" src="app/ViewBase.js"></script>
+    <script type="text/javascript" src="app/MasonryModel.js"></script>
     <!--
     <script type="text/javascript" src="app/Controller.js"></script>
     <script type="text/javascript" src="app/View.js"></script>
